# Predizione-della-riammissione-ospedaliera-a-30-Giorni

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  jekyll.yml
docs/: Gemfile  _config.yml  index.md
docs/_includes/: footer_custom.html
docs/_sass/custom/: custom.scss
docs/scelte_tecniche/: architettura.md  index.md  scelte_modello.md
docs/teoria/: 01_problem_framing_clinico.md  02_eda_clinica.md  03_preprocessing_dati_clinici.md  04_modelli_classificazione_binaria.md  05_metriche_classi_sbilanciate.md  06_fairness_audit_in_sanita.md  07_interpretabilita_e_limiti.md  index.md
notebooks/: 01_eda_demographics_target.ipynb  02_preprocessing_icd9_grouping.ipynb  03_models_logreg_vs_ensemble.ipynb  04_fairness_audit.ipynb  05_interpretability_and_errors.ipynb
scripts/: build_notebooks.py  run_full.sh
src/readmit_pipeline/: __init__.py  config.py  data.py  evaluation.py  fairness.py  features.py  icd9.py  inference.py  interpretability.py  models.py  pipeline.py  preprocessing.py  splits.py  threshold.py  tuning.py
tests/: test_data.py  test_fairness.py  test_icd9.py  test_splits.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: intro.md
website/docs/appendici/: _category_.json  faq.md  glossario.md
website/docs/laboratorio/: 01-setup-ambiente.md  02-prima-esplorazione.md  03-primo-modello.md  04-leggi-le-metriche.md  05-fairness-audit-pratico.md  06-esercizi-proposti.md  _category_.json
website/docs/per-iniziare/: 01-cosa-imparerai.md  02-prerequisiti-ml.md  03-prerequisiti-clinici.md  04-percorso-studio.md  _category_.json
website/docs/scelte-tecniche/: _category_.json  architettura.md  scelte-modello.md
website/docs/teoria/: 01-problem-framing-clinico.md  02-eda-clinica.md  03-preprocessing-dati-clinici.md  04-modelli-classificazione-binaria.md  05-metriche-classi-sbilanciate.md  06-fairness-audit-sanita.md  _category_.json  (+1 more)
(+4 files in other folders)
