[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readmit-pipeline"
version = "0.1.0"
description = "Pipeline di Machine Learning + audit di equità per la predizione della riammissione ospedaliera a 30 giorni (Diabetes 130-US Hospitals, UCI 296)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Federico Calò", email = "fedcal01@gmail.com" }]
keywords = [
    "machine-learning",
    "classification",
    "healthcare",
    "fairness",
    "fairlearn",
    "hospital-readmission",
    "diabetes",
    "scikit-learn",
    "imbalanced",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.3,<2.0",
    "scipy>=1.13,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "fairlearn>=0.10,<1.0",
    "joblib>=1.4,<2.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "nbformat>=5.10",
    "nbconvert>=7.16",
    "jupytext>=1.16",
]
advanced = [
    "shap>=0.45",
    "xgboost>=2.0,<3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
readmit-train = "readmit_pipeline.pipeline:main_train"
readmit-predict = "readmit_pipeline.inference:main_predict"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"
